@@ -18,9 +18,10 @@
 #define SOLARUS_SPRITE_H
 
 #include "solarus/Common.h"
+#include "solarus/entities/NonAnimatedRegions.h"
+#include "solarus/lua/ScopedLuaRef.h"
 #include "solarus/Drawable.h"
 #include "solarus/SpritePtr.h"
-#include "solarus/entities/NonAnimatedRegions.h"
 #include <map>
 #include <string>
 
@@ -113,6 +114,9 @@ class Sprite: public Drawable {
     virtual void draw_transition(Transition& transition) override;
     virtual Surface& get_transition_surface() override;
 
+    // Lua
+    const ScopedLuaRef& get_finished_callback() const;
+    void set_finished_callback(const ScopedLuaRef& finished_callback_ref);
     virtual const std::string& get_lua_type_name() const override;
 
   private:
@@ -121,6 +125,7 @@ class Sprite: public Drawable {
     int get_next_frame() const;
     Surface& get_intermediate_surface() const ;
     void set_frame_changed(bool frame_changed);
+    void notify_finished();
 
     // animation set
     static std::map<std::string, SpriteAnimationSet*> all_animation_sets;
@@ -154,6 +159,10 @@ class Sprite: public Drawable {
     uint32_t blink_delay;              /**< blink delay of the sprite, or zero if the sprite is not blinking */
     bool blink_is_sprite_visible;      /**< when blinking, true if the sprite is visible or false if it is invisible */
     uint32_t blink_next_change_date;   /**< date of the next change when blinking: visible or not */
+
+    ScopedLuaRef
+        finished_callback_ref;         /**< Lua ref to an action to do when this movement finishes.
+                                        * Automatically cleared when executed. */
 
 };
 
