@@ -27,7 +27,9 @@
 #include "solarus/lowlevel/Surface.h"
 #include "solarus/lowlevel/System.h"
 #include "solarus/lua/LuaContext.h"
+#include "solarus/lua/LuaTools.h"
 #include "solarus/movements/Movement.h"
+#include <lua.hpp>
 #include <limits>
 #include <memory>
 #include <sstream>
@@ -96,7 +98,10 @@ Sprite::Sprite(const std::string& id):
   finished(false),
   synchronize_to(nullptr),
   intermediate_surface(nullptr),
-  blink_delay(0) {
+  blink_delay(0),
+  blink_is_sprite_visible(true),
+  blink_next_change_date(0),
+  finished_callback_ref() {
 
   set_current_animation(animation_set.get_default_animation());
 }
@@ -278,6 +283,7 @@ void Sprite::set_current_animation(const std::string& animation_name) {
     }
 
     set_current_frame(0, false);
+    set_finished_callback(ScopedLuaRef());
 
     LuaContext* lua_context = get_lua_context();
     if (lua_context != nullptr) {
@@ -688,9 +694,7 @@ void Sprite::update() {
       // Test if the animation is finished.
       if (next_frame == -1) {
         finished = true;
-        if (lua_context != nullptr) {
-          lua_context->sprite_on_animation_finished(*this, current_animation_name);
-        }
+        notify_finished();
       }
       else {
         current_frame = next_frame;
@@ -713,9 +717,7 @@ void Sprite::update() {
     // Take the same frame as the other sprite.
     if (synchronize_to->is_animation_finished()) {
       finished = true;
-      if (lua_context != nullptr) {
-        lua_context->sprite_on_animation_finished(*this, current_animation_name);
-      }
+      notify_finished();
     }
     else {
       int other_frame = synchronize_to->get_current_frame();
@@ -880,11 +882,67 @@ Surface& Sprite::get_intermediate_surface() const {
 }
 
 /**
+ * \brief Returns the Lua registry ref to what to do when the current
+ * animation finishes.
+ * \return A Lua ref to a function or string (the name of an animation),
+ * or an empty ref.
+ */
+const ScopedLuaRef& Sprite::get_finished_callback() const {
+  return finished_callback_ref;
+}
+
+/**
+ * \brief Sets what to do when the current animation finishes.
+ * \param finished_callback_ref A Lua ref to a function or string
+ * (the name of an animation), or an empty ref.
+ */
+void Sprite::set_finished_callback(const ScopedLuaRef& finished_callback_ref) {
+
+  if (!finished_callback_ref.is_empty()) {
+    Debug::check_assertion(get_lua_context() != nullptr, "Undefined Lua context");
+  }
+
+  this->finished_callback_ref = finished_callback_ref;
+}
+
+/**
  * \brief Returns the name identifying this type in Lua.
  * \return the name identifying this type in Lua
  */
 const std::string& Sprite::get_lua_type_name() const {
   return LuaContext::sprite_module_name;
+}
+
+/**
+ * \brief Performs appropriate notifications when the current animation finishes.
+ */
+void Sprite::notify_finished() {
+
+  LuaContext* lua_context = get_lua_context();
+  if (lua_context != nullptr) {
+    lua_State* l = finished_callback_ref.get_lua_state();
+
+    // Sprite callback.
+    if (!finished_callback_ref.is_empty()) {
+      // The callback may be a function or a string.
+      finished_callback_ref.push();
+      finished_callback_ref.clear();
+      if (lua_isstring(l, -1)) {
+        // Name of a next animation to set.
+        std::string animation = lua_tostring(l, -1);
+        lua_pop(l, 1);
+        set_current_animation(animation);
+      }
+      else {
+        // Function to call.
+        LuaTools::call_function(l, 0, 0, "sprite callback");
+      }
+    }
+
+    // Sprite event.
+    lua_context->sprite_on_animation_finished(*this, current_animation_name);
+  }
+
 }
 
 }
