@@ -172,8 +172,15 @@ int LuaContext::sprite_api_set_animation(lua_State* l) {
 
   return LuaTools::exception_boundary_handle(l, [&] {
     Sprite& sprite = *check_sprite(l, 1);
-
     const std::string& animation_name = LuaTools::check_string(l, 2);
+    ScopedLuaRef callback_ref;
+    if (!lua_isnil(l, 3)) {
+      if (!lua_isfunction(l, 3) && !lua_isstring(l, 3)) {
+        LuaTools::type_error(l, 3, "function or string");
+      }
+      callback_ref = LuaTools::create_ref(l, 3);
+    }
+
     if (!sprite.has_animation(animation_name)) {
       LuaTools::arg_error(l, 2,
           std::string("Animation '") + animation_name
@@ -182,6 +189,7 @@ int LuaContext::sprite_api_set_animation(lua_State* l) {
     }
 
     sprite.set_current_animation(animation_name);
+    sprite.set_finished_callback(callback_ref);
     sprite.restart_animation();
 
     return 0;
