@@ -37,6 +37,7 @@ map{ id = "bugs/851_entity_get_sprites", description = "#851: entity:get_sprites
 map{ id = "bugs/855_hero_get_sprite_wrong", description = "#855: hero:get_sprite() returns the wrong sprite" }
 map{ id = "bugs/859_crash_game_start", description = "#859: Crash when restarting game" }
 map{ id = "bugs/860_crash_remove_sprite", description = "#860: Crash when removing secondary sprite" }
+map{ id = "bugs/861_sprite_set_animation_callback", description = "#861: sprite:set_animation() callback parameter" }
 map{ id = "bugs/867_crash_crystal", description = "#867: Crash with crystals" }
 map{ id = "dynamic_tile_tests", description = "Dynamic tile tests" }
 map{ id = "jumper_tests", description = "Jumper tests" }
